updates after bad merge

--- a/custom-pieces.html
+++ b/custom-pieces.html
@@ -13,6 +13,7 @@
 <body>
 <header class="site-header">
   <a class="brand" href="index.html"><span class="brand__name">Ad Hoc Creations</span><span class="brand__tag">Bespoke CNC Woodwork</span></a>
+ 
   <nav class="nav">
     <a href="wedding-signage.html">Weddings</a>
     <a href="house-signs.html">House signs</a>
@@ -36,6 +37,7 @@
     <figure class="card"><img src="images/custom/kids-name-1.jpg" alt="Name sign" loading="lazy"><figcaption>Child's bedroom sign</figcaption></figure>
     <figure class="card"><img src="images/custom/beware-dog.jpg" alt="Custom wooden beware of the dog sign" loading="lazy"><figcaption>Pet pieces</figcaption></figure>
     <figure class="card"><img src="images/custom/ring-box.jpg" alt="Bespoke wooden one-off commission" loading="lazy"><figcaption>Custom wedding ring box</figcaption></figure>
+     <figure class="card"><img src="images/custom/dog-bed.jpg" alt="Bespoke dog bed" loading="lazy"><figcaption>Custom Dog Bed</figcaption></figure>
   </div>
 
   <p style="color: var(--muted); max-width: 75ch;">
