--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="enquire.html">Enquire</a>
     <a href="about.html">About</a>
   </nav>
-  </nav>
+
 
 
   <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">Menu</button>
@@ -37,9 +37,10 @@
   <section class="hero">
     <div class="hero__copy">
       <p class="kicker">CNC-crafted • Hand-finished • Made to order</p>
-      <h1>Coming soon.</h1>
+      <h1>Custom wooden pieces, made for your life and your day.</h1>
       <p class="lead">
-        We're currently crafting our site. Enquiries still welcome. 
+        From wedding and event signage to house signs, pet pieces and one-off commissions —
+        we combine CNC precision with careful finishing to celebrate natural timber.
       </p>
 
       <div class="cta">
