--- a/gallery.html
+++ b/gallery.html
@@ -20,8 +20,12 @@
     <span class="brand__tag">Bespoke CNC Woodwork</span>
   </a>
 
-  <nav class="nav">       
-    <a href="gallery.html">Gallery</a>    
+  <nav class="nav">
+    <a href="wedding-signage.html">Weddings</a>
+    <a href="house-signs.html">House signs</a>
+    <a href="custom-pieces.html">Custom pieces</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="process.html">Process</a>
     <a href="enquire.html">Enquire</a>
     <a href="about.html">About</a>
   </nav>
@@ -153,20 +157,7 @@
     </figure>
   </div>
 
-    <!-- Practical build -->
-    <figure class="card">
-      <a
-        href="images/custom/dog-bed.jpg"
-        class="glightbox"
-        data-gallery="portfolio"
-        data-title="Dog bed"
-      >
-        <img src="images/custom/dog-bed.jpg" alt="Custom woodwork" loading="lazy">
-      </a>
 
-      <figcaption>Personalised Dog Bed</figcaption>
-    </figure>
-  </div>
 
 
 
